--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
       fail-fast: false
       matrix:
         config: [default,lite,lite-lto] # lto reduce about 300KB for lite build
-        target: [macOS,iOS,iOSSimulator,macCatalyst]
+        target: [macOS,iOS,iOSSimulator,macCatalyst,tvOS,tvOSSimulator]
         exclude:
           - config: default
             target: iOSSimulator
@@ -36,6 +36,10 @@ jobs:
             target: macCatalyst
           - config: default
             target: iOS
+          - config: default
+            target: tvOS
+          - config: default
+            target: tvOSSimulator
     steps:
     - uses: actions/checkout@v4
     - name: Create Build Environment
@@ -50,11 +54,8 @@ jobs:
       shell: bash
       run: |
         export FFSRC=$PWD/ffmpeg-${FF_VERSION}
-        [ "${TARGET_OS}" = iOS ] && export USER_OPT="--enable-wolfssl"
+        [[ "${TARGET_OS}" == "iOS" || "${TARGET_OS}" == "tvOS"* ]] && export USER_OPT="--enable-wolfssl"
         ./avbuild.sh ${TARGET_OS}
-        if [[ "${TARGET_OS}" == "iOS"* ]]; then
-          find sdk-* -name "*.dylib" -delete
-        fi
     - name: Make SDK
       shell: bash
       run: ./tools/ci-after-build.sh
