--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        config: [lite]
+        config: [default]
         target: [macOS,iOS]
         exclude:
           - config: default
@@ -80,7 +80,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        config: [lite]
+        config: [default]
         target: [windows-desktop]
     steps:
     - uses: actions/checkout@v3
@@ -149,7 +149,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        config: [lite]
+        config: [default]
         target: [windows-desktop]
     steps:
     - uses: actions/checkout@v3
@@ -205,7 +205,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        config: [lite]
+        config: [default]
     steps:
     - uses: actions/checkout@v3
       with:
@@ -252,7 +252,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        config: [lite]
+        config: [default]
     steps:
     - uses: actions/checkout@v3
     - name: 'Restore sysroot cache'
@@ -292,10 +292,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: [VS2022]
     steps:
-    - name: Download vs2022 desktop lite
+    - name: Download vs2022 desktop default
       uses: actions/download-artifact@v3
       with:
-        name: ffmpeg-${{ env.FF_VERSION }}-windows-desktop-VS2022lite
+        name: ffmpeg-${{ env.FF_VERSION }}-windows-desktop-VS2022default
     - name: Upload to SourceForge
       if: (github.event_name != 'pull_request')
       shell: bash
