--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,8 @@ on:
 env:
 #  if: (github.event_name == 'schedule')
 #  GITHUB_ENV: https://docs.github.com/en/actions/learn-github-actions/environment-variables#about-environment-variables
-  FF_VERSION: ${{ vars.FF_VER }} # TODO: latest release if triggered by schedule
-  LLVM_VER: ${{ vars.LLVM_VER }}
+  FF_VERSION: master # TODO: latest release if triggered by schedule
+  LLVM_VER: 17
   LLVM_VER_DEFAULT: 17
   NINJA_STATUS: '[%f/%t %e %r]'
   SF_PW_MAPPED: ${{ secrets.SF_PW }}
